dataset1235/2025-2/1955397009/users/209087680/executions/903431226_3198308593.log
== SUBMISSION (2025-08-26 12:15:04)
-- CODE: 
from math import *
raio = float(input()) 
volume = (4 / 3) * pi * raio * 3  
print(round(volume,4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 4
    print(round(volume,4)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 4
    print(round(volume,4)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 4
    print(round(volume,4)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 4
    print(round(volume,4)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 4
    print(round(volume,4)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 4
    print(round(volume,4)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 12:15:31)
-- CODE: 
from math import *
raio = float(input()) 
volume = (4 / 3) * pi * raio ** 3  
print(round(volume,4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
---- user output:
696.91
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
---- user output:
4.1888
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
---- user output:
137.2583
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
---- user output:
4188.7902
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
---- user output:
7238.2295
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
---- user output:
0.5236
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 12:15:18)
-- CODE: 
from math import *
raio = float(input()) 
volume = (4 / 3) * pi * raio * 3  
print(round(volume,4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
---- user output:
69.115
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
---- user output:
12.5664
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
---- user output:
40.2124
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
---- user output:
125.6637
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
---- user output:
150.7964
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
---- user output:
6.2832
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 12:15:06)
-- CODE: 
from math import *
raio = float(input()) 
volume = (4 / 3) * pi * raio * 3  
print(round(volume,4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 4
    print(round(volume,4)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 4
    print(round(volume,4)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 4
    print(round(volume,4)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 4
    print(round(volume,4)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 4
    print(round(volume,4)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 4
    print(round(volume,4)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
